# SensorStreamer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
SimpleIgtLinkStreamer/: CMakeLists.txt  config.json
SimpleIgtLinkStreamer/include/: AtiForceSensor.hpp  Config.hpp  SensorHandler.hpp  atisensor.h
SimpleIgtLinkStreamer/src/: AtiForceSensor.cpp  SensorHandler.cpp  atisensor.cpp  main.cpp
